--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react-hook": "^0.0.1",
 		"react-hook-form": "^6.7.2",
 		"react-string-replace": "^0.4.4",
-		"striptags": "^3.1.1"
+		"striptags": "^3.1.1",
+		"react-window": "^1.8.6"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
