--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@volenday/column-string",
-	"version": "3.3.4",
+	"version": "3.3.5",
 	"private": false,
 	"license": "MIT",
 	"author": "Volenday <developers@volenday.com>",
@@ -19,8 +19,8 @@
 		"react-hook": "^0.0.1",
 		"react-hook-form": "^6.7.2",
 		"react-string-replace": "^0.4.4",
-		"striptags": "^3.1.1",
-		"react-window": "^1.8.6"
+		"react-window": "^1.8.6",
+		"striptags": "^3.1.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
